# shaping-terrain-using-advanced-multi-scale-erosion

./: Cargo.toml  LICENSE  README.mdx
assets/shaders/: compute_and_vertex.wgsl  compute_and_vertex_render.wgsl  compute_mesh.wgsl  deposition.wgsl  erosion.wgsl  gpu_readback.wgsl  particles.wgsl  particles_compute.wgsl  random_colors.wgsl  simple.wgsl  simple_terrain.wgsl  storage_buffer.wgsl  terrain.wgsl  terrain_compute.wgsl  terrain_render.wgsl  thermal.wgsl  vertex_displacement.wgsl
src/: camera.rs  camera_orbit.rs  compute_and_vertex.rs  compute_mesh.rs  cube_colors.rs  foo.rs  gpu_readback.rs  main.rs  particles_wip.rs  random_colors.rs  shaders.rs  storage_buffer.rs  terrain.rs  vertex_displacement.rs
