[package]
name = "shaping-terrain-using-advanced-multi-scale-erosion"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { version = "0.18.1", features = [
    "dynamic_linking",
    "file_watcher",
    "bevy_dev_tools",
] }
bevy-inspector-egui = "0.36.0"
bytemuck = "1.25.0"
inquire = "0.9.4"
noise = "0.9.0"
rand = "0.10.0"


[profile.dev]
opt-level = 1 # Needed for faster compile times, it's default anyway lol

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
